Tweak padding to ensure full focus ring is visible

--- a/sass/themes/cr/2017/components/navigation/_expanded-footer.scss
+++ b/sass/themes/cr/2017/components/navigation/_expanded-footer.scss
@@ -215,7 +215,7 @@ footer.footer--expanded {
 
             @include breakpoint($screen-md) {
               margin-top: 10px;
-              padding: 10px 0;
+              padding: 10px 4px;
             }
 
              a {
@@ -278,7 +278,7 @@ footer.footer--expanded {
               float: right;
               width: 50%;
               li {
-                 padding: 10px 0px 10px 10px;
+                 padding: 10px 4px 10px 10px;
               }
              }
            }
